edit css folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/c72894d93b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./assets/styles/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="container">
