change background image

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <header class="main-header">
+      <h1>
+        مصمم شوید که کاری باید صورت گیرد، سپس راه انجام آن را خواهید یافت.
+      </h1>
+      <p>آبراهام لینکلن شانزدهمین رئیس جمهوری امریکا</p>
+    </header>
+
     <div class="container">
       <div class="todos">
         <div class="todos__input">
