solved add blank todo

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           ></span>
           <i class="fas fa-align-right write-icon"></i>
         </div>
+        <div class="todos__validateMessage todosValidateMessage">* لطفا کار خود را وارد کنید.</div>
         <div class="todos__controller">
           <div class="todos__filter">
             <span class="all"> نمایش همه</span>
